--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -20,6 +20,11 @@
   margin-top: 40px;
   margin-bottom: 40px;
 }
+
+.home_conf_subtitle {
+  text-align: center;
+}
+
 .ten_class {
   text-align: center;
   img {
