--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row frontpage">
   <div class="col-md-6">
     <div class="home_img">
-      <%= image_tag "home_img3.jpg", class: "img-responsive" %>
+      <%= image_tag "home_img_2018.jpg", class: "img-responsive" %>
     </div>
   </div>
   <div class="col-md-6">
@@ -19,15 +19,15 @@
         <% end %>
       <% else %>
         <div class="invite_to_conf">
-          <h4><%= t :home_conf_description %></h4>
-          <p><%= link_to t(:sign_up), (new_user_registration_path + '#new_registration'), class: "btn btn-primary btn-lg"%></p>
-          <p><%= t(:or) %></p>
-          <p><%= link_to t(:home_link_log_in), new_user_session_path, class: "btn btn-default btn-lg"%></p>
+          <h4><%= t :home_conf_description_temp %></h4>
+          <!-- <p><%= link_to t(:sign_up), (new_user_registration_path + '#new_registration'), class: "btn btn-primary btn-lg"%></p> -->
+          <!-- <p><%= t(:or) %></p> -->
+          <!-- <p><%= link_to t(:home_link_log_in), new_user_session_path, class: "btn btn-default btn-lg"%></p> -->
         </div>
       <% end %>
       <div class="attach">
-        <div><%= link_to "Информационное письмо (Рус.)", '/docs/Inform1_STconference2.pdf' %></div>
-        <div><%= link_to "Informational Letter (Eng.)", '/docs/Inform1_STconference_ENG2.pdf' %></div>
+        <!-- <div><%= link_to "Информационное письмо (Рус.)", '/docs/Inform1_STconference2.pdf' %></div> -->
+        <!-- <div><%= link_to "Informational Letter (Eng.)", '/docs/Inform1_STconference_ENG2.pdf' %></div> -->
       </div> 
     </div> 
   </div>
