--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,20 +14,28 @@
       <%= render 'layouts/nav2017' %>
       <%= render 'layouts/messages' %>
       <div class="row banners">
-        <div class="col-md-3 hidden-md hidden-lg banner">
+        <div class="hidden-md hidden-lg banner">
           <%= image_tag "banner_aksts_kofst.jpg", class: "img-responsive" %>
         </div>
-        <div class="col-md-3 hidden-xs hidden-sm banner">
-          <%= image_tag "banner1a.png", class: "img-responsive" %>
+        <div class="col-md-offset-1 col-md-2 hidden-xs hidden-sm banner">
+          <%= image_tag "banner_aksts_a.png", class: "img-responsive" %>
         </div>
-        <div class="col-md-3 hidden-xs hidden-sm banner">
-          <%= image_tag "banner2a.gif", class: "img-responsive" %>
+        <div class="col-md-2 hidden-xs hidden-sm banner">
+          <%= image_tag "banner_kofst_a.gif", class: "img-responsive" %>
         </div>
-        <div class="col-md-3 banner">
-          <%= image_tag "banner5a.png", class: "img-responsive" %>
+
+        <div class="col-md-2 banner">
+          <%= image_tag "banner_ook_a.jpg", class: "img-responsive" %>
         </div>
-        <div class="col-md-3 banner">
-          <%= image_tag "banner6a.png", class: "img-responsive" %>
+
+        <div class="hidden-md hidden-lg banner">
+          <%= image_tag "banner_kahak_tinbo.jpg", class: "img-responsive" %>
+        </div>
+        <div class="col-md-2 hidden-xs hidden-sm banner">
+          <%= image_tag "banner_kahak_a.png", class: "img-responsive" %>
+        </div>
+        <div class="col-md-2 hidden-xs hidden-sm banner">
+          <%= image_tag "banner_tinbo_a.png", class: "img-responsive" %>
         </div>
       </div>
       <h1 class="home_conf_title"><%= t :home_conf_antok %></h1>
