--- a/app/views/layouts/_nav2017.html.erb
+++ b/app/views/layouts/_nav2017.html.erb
@@ -1,6 +1,5 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
@@ -18,12 +17,12 @@
       <ul class="nav navbar-nav">
         <li><%= link_to t(:home_link_home), root_path %></li>
         <% if user_signed_in? %>
-          <!-- <li><%= link_to t(:step2_my_account_btn), edit_user_registration_path %></li>
+          <li><%= link_to t(:step2_my_account_btn), edit_user_registration_path %></li>
           <li><%= link_to t(:find_antokid), antok_id_path %></li>
-          <li><%= link_to t(:home_link_log_out), destroy_user_session_path, :method=>'delete' %></li> -->
+          <li><%= link_to t(:home_link_log_out), destroy_user_session_path, :method=>'delete' %></li>
         <% else %>
-          <!-- <li><%= link_to t(:home_link_log_in), new_user_session_path %></li>
-          <li><%= link_to t(:sign_up), new_user_registration_path %></li> -->
+          <li><%= link_to t(:home_link_log_in), new_user_session_path %></li>
+          <li><%= link_to t(:sign_up), new_user_registration_path %></li>
         <% end %> 
       </ul>
     </div><!-- /.navbar-collapse -->
