--- a/app/views/antok_members/index.html.erb
+++ b/app/views/antok_members/index.html.erb
@@ -1,38 +1,21 @@
-<h1 id="antokid">Поиск АНТОК ID</h1>
-<div class="alert alert-info">
-  Поиск производится по точному совпадению. Введите полностью ФИО. Если результат поиска пустой, то попробуйте поиск по фамилии и имени без отчества. Если вы не смогли найти свой ID, то свяжитесь AKSTSRussia@gmail.com
-</div>
-<div class="row">
-  <div class="col-md-6">
-    <%= form_tag(antok_id_path + '#antok_id_table', :method => "get") do %>
-      <div class="form-group">
-        <label for="fio">
-          <abbr title="required">*</abbr> 
-          ФИО
-        </label>
-        <div class="controls">
-          <%= text_field_tag :fio, params[:fio], class: "form-control", id: "fio" %>
-        </div>
-      </div>
-      <%= submit_tag "Найти", :name => nil, class: "btn btn-large btn-primary" %>
-    <% end %>
-  </div>
-</div>
-<div class="row search_antok_id_table" id="antok_id_table">
-  <div class="col-md-12">
-    <table class="table table-striped">
-      <tr>
-        <th>АНТОК ID</th>
-        <th>ФИО</th>
-        <th>Год рождения</th>
-      </tr>
-      <% @members.each_with_index do |member, index| %>
-        <tr>
-          <td><%= member.antok_id %></td>
-          <td><%= member.fio %></td>
-          <td><%= member.birth_year == 1899 ? "нет данных" : member.birth_year %></td>
-        </tr>
-      <% end %>
-    </table>
-  </div>
-</div>
+<h1 id="h1_all_applics">Члены АНТОК</h1>
+<table class="table table-striped">
+  <tr>
+    <th>N</th>
+    <th>АНТОК ID</th>
+    <th>ФИО</th>
+    <th>Дата рождения</th>
+    <th>Год рождения</th>
+  </tr>
+  <% var = 0 %>
+  <% @members.each do |member| %>
+    <% var+=1 %>
+    <tr>
+      <td><%= var %></td>
+      <td><%= link_to member.antok_id, member %></td>
+      <td><%= member.fio %></td>
+      <td><%= member.birth_date ? member.birth_date.to_date : '' %></td>
+      <td><%= member.birth_year %></td>
+    </tr>
+  <% end %>
+</table>
