--- a/app/views/antok_members/index.html.erb
+++ b/app/views/antok_members/index.html.erb
@@ -1,4 +1,5 @@
 <h1 id="h1_all_applics">Члены АНТОК</h1>
+<p><%= link_to "Добавить", new_antok_member_path, class: "btn btn-primary" %></p>
 <table class="table table-striped">
   <tr>
     <th>N</th>
@@ -12,7 +13,7 @@
     <% var+=1 %>
     <tr>
       <td><%= var %></td>
-      <td><%= link_to member.antok_id, member %></td>
+      <td><%= link_to member.antok_id, edit_antok_member_path(member) %></td>
       <td><%= member.fio %></td>
       <td><%= member.birth_date ? member.birth_date.to_date : '' %></td>
       <td><%= member.birth_year %></td>
