--- a/app/views/antok_members/new.html.erb
+++ b/app/views/antok_members/new.html.erb
@@ -1,45 +1,13 @@
-<% provide(:title, t(:step2_title)) %>
-<h1 id="new_applic"><%= t(:step2_title) %></h1>
-<div class="alert alert-info">
-  <%= t(:step2_info) %>
-</div>
+<h1 id="new_applic">Добавить Антоковца</h1>
 <div id="form_anchor" class="row">
   <div class="col-md-6 applic-form">
-  	<!-- ADD FORM ANCHOR #form_anchor -->
-    <%= simple_form_for(@applic, url: (applics_path + '#form_anchor')) do |f| %>
+    <%= simple_form_for(@member) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
-      <h3><%= t(:personal_info) %></h3>
+      <%= f.input :antok_id, :input_html => { :class => 'form-control' } %>
       <%= f.input :fio, :input_html => { :class => 'form-control' } %>
-      <%= f.input :fio_eng, :input_html => { :class => 'form-control' } %>
-      <%= f.input :email, :input_html => { :class => 'form-control' } %>
-      <%= f.input :phones, :input_html => { :class => 'form-control' } %>
-      <%= f.input :phone_work, :input_html => { :class => 'form-control' } %>
-      <%= f.input :phone_home, :input_html => { :class => 'form-control' } %>  
-      <h3><%= t(:education) %></h3>
-      <%= f.input :uch_zvanie, collection: [[t(:choose_value),""], ["Нет", "Нет"], ["Доцент", "доцент"], ["Профессор", "Профессор"], ["Член-корреспондент", "Член-корр."], ["Академик", "Академик"]], selected: @applic.uch_zvanie, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
-      <%= f.input :uch_stepen, collection: [[t(:choose_value),""], ["Нет", "Нет"], [t(:st_student),"Студент"], [t(:st_bachelor),"Бакалавр"], [t(:st_special),"Специалист"], [t(:st_magister), "Магистр"], [t(:st_kandidat), "Кандидат наук"], [t(:st_doctor),"Доктор наук"]], selected: @applic.uch_stepen, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
-      <%= f.input :acad_position, collection: [[t(:choose_value),""], ["Нет", "Нет"], ["Лаборант","Лаборант"], ["Старший лаборант","Старший лаборант"], ["Ассистент","Ассистент"], ["Преподаватель", "Преподаватель"], ["Старший преподаватель", "Старший преподаватель"], ["Доцент","Доцент"], ["Профессор","Профессор"], ["Заведующий кафедрой","Заведующий кафедрой"], ["Декан","Декан"],["Проректор","Проректор"],["Ректор","Ректор"],["Младший научный сотрудник","Младший научный сотрудник"],["Научный сотрудник","Научный сотрудник"],["Старший научный сотрудник","Старший научный сотрудник"],["Ведущий научный сотрудник","Ведущий научный сотрудник"],["Главный научный сотрудник","Главный научный сотрудник"]], selected: @applic.acad_position, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
-      <h3><%= t(:work) %></h3>
-      <%= f.input :work_company, :input_html => { :class => 'form-control' } %>
-      <%= f.input :work_country, as: :string, :input_html => { :class => 'form-control' } %>
-      <%= f.input :work_city, :input_html => { :class => 'form-control' } %>
-      <%= f.input :work_position, :input_html => { :class => 'form-control' } %>
-      <% if params[:locale]!='en' %>
-        <h3><%= t(:additional_info) %></h3>
-        <%= f.input :antok_city, collection: [[t(:choose_value),""], [t(:uz_sakhalinsk),"Южно-Сахалинск"], [t(:moscow),"Москва"], [t(:voronezh), "Воронеж"], [t(:ekaterinburg), "Екатеринбург"], [t(:novosibirsk),"Новосибирск"], [t(:krasnoyarsk),"Красноярск"], [t(:kaliningrad),"Калининград"]], selected: @applic.antok_city, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
-      <% end %>
-      <h3><%= t(:applicaion_info) %></h3>
-      <%= f.input :science_interests, as: :text, :input_html => { :class => 'form-control' } %>
-      <%= f.input :conf_topic, as: :text, :input_html => { :class => 'form-control' } %>
-      <%= f.input :conf_section, collection: [[t(:choose_value),""],["Физика и математика","Физика и математика"], ["Информационные технологии и нанотехнологии", "Информационные технологии и нанотехнологии"], ["Энергетика и электротехника","Энергетика и электротехника"], ["Механика, машиностроение и приборостроение", "Механика, машиностроение и приборостроение"], ["Архитектура и строительство", "Архитектура и строительство"], ["Химия, новые материалы и технологии их обработки", "Химия, новые материалы и технологии их обработки"], ["Биотехнологии, биология, технологии живых систем и океанография", "Биотехнологии, биология, технологии живых систем и океанография"], ["Науки о земле и природные ресурсы", "Науки о земле и природные ресурсы"], ["Общественные науки","Общественные науки"]], selected: @applic.conf_section, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
-      <%= f.input :conf_coauthors, as: :text, :input_html => { :class => 'form-control' } %>
-      <%= f.input :participation_type, collection: [[t(:choose_value),""], [t(:participance), "Очное"], [t(:publications_only), "Заочное"]], selected: @applic.participation_type, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
-      <br/> 
-	     <div class="alert alert-info">
-	         <%= t(:step2_warning) %>
-	     </div>
+      <%= f.input :birth_date, as: :date, default: Date.parse('1900-01-01'), start_year: 1930, end_year: Date.today.year - 16, :input_html => { :class => 'form-control' } %>
       <%= f.submit t(:save), class: "btn btn-lg btn-primary", id: "Save" %>
-      <%= link_to t(:cancel), root_path, class: "btn btn-lg btn-default" %>
+      <%= link_to t(:cancel), antok_members_path, class: "btn btn-lg btn-default" %>
     <% end %>
   </div>
 </div>
