--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,15 +1,20 @@
-<div id="role-options-<%= user.id %>" class="modal" style="display: none;">
-  <%= simple_form_for user, :url => user_path(user), :html => {:method => :put, :class => 'form-horizontal' } do |f| %>
-    <div class="modal-header">
-      <a class="close" data-dismiss="modal">&#215;</a>
-      <h3>Change Role</h3>
+<!-- Modal -->
+<div class="modal fade" id="role-options-<%= user.id %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <%= simple_form_for user, :url => user_path(user), :html => {:method => :put, :class => 'form-horizontal' } do |f| %>
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Change Role</h4>
+      </div>
+      <div class="modal-body" style="padding: 20px 40px 0 40px;">
+        <%= f.input :role_ids, :collection => Role.all, :label_method => lambda {|t| t.name.titleize}, :label => false, :item_wrapper_class => 'inline', checked: user.role_ids.first, :input_html => { :class => 'form-control' } %>
+      </div>
+      <div class="modal-footer">
+        <%= f.submit "Change Role", :class => "btn btn-primary" %>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+      <% end %>
     </div>
-    <div class="modal-body">
-      <%= f.input :role_ids, :collection => Role.all, :as => :radio_buttons, :label_method => lambda {|t| t.name.titleize}, :label => false, :item_wrapper_class => 'inline', checked: user.role_ids.first %>
-    </div>
-    <div class="modal-footer">
-      <%= f.submit "Change Role", :class => "btn" %>
-      <a class="btn" data-dismiss="modal" href="#">Close</a>
-    </div>
-  <% end %>
+  </div>
 </div>
