--- a/app/views/applics/index.xls.erb
+++ b/app/views/applics/index.xls.erb
@@ -19,8 +19,8 @@
         <Cell><Data ss:Type="String">Домашний телефон</Data></Cell>
         <Cell><Data ss:Type="String">Ученое звание</Data></Cell>
         <Cell><Data ss:Type="String">Ученая степень</Data></Cell>
-        <Cell><Data ss:Type="String">Академическая должность</Data></Cell>
         <Cell><Data ss:Type="String">Компания</Data></Cell>
+        <Cell><Data ss:Type="String">Компания сокращ.</Data></Cell>
         <Cell><Data ss:Type="String">Страна</Data></Cell>
         <Cell><Data ss:Type="String">Город</Data></Cell>
         <Cell><Data ss:Type="String">Должность</Data></Cell>
@@ -30,7 +30,6 @@
         <Cell><Data ss:Type="String">Направление</Data></Cell>
         <Cell><Data ss:Type="String">Соавторы</Data></Cell>
         <Cell><Data ss:Type="String">Тип участия</Data></Cell>
-        <Cell><Data ss:Type="String">Нужна компенсация</Data></Cell>
       </Row>
     <% @applics.each do |applic| %>
       <Row>
@@ -46,8 +45,8 @@
         <Cell><Data ss:Type="String"><%= applic.phone_home %></Data></Cell>
         <Cell><Data ss:Type="String"><%= applic.uch_zvanie %></Data></Cell>
         <Cell><Data ss:Type="String"><%= applic.uch_stepen %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= applic.acad_position %></Data></Cell>
         <Cell><Data ss:Type="String"><%= applic.work_company %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.work_company_short %></Data></Cell>
         <Cell><Data ss:Type="String"><%= applic.work_country %></Data></Cell>
         <Cell><Data ss:Type="String"><%= applic.work_city %></Data></Cell>
         <Cell><Data ss:Type="String"><%= applic.work_position %></Data></Cell>
@@ -56,8 +55,7 @@
         <Cell><Data ss:Type="String"><%= applic.conf_topic %></Data></Cell>
         <Cell><Data ss:Type="String"><%= applic.conf_section %></Data></Cell>
         <Cell><Data ss:Type="String"><%= applic.conf_coauthors %></Data></Cell>
-        <Cell><Data ss:Type="String"><%= applic.participation_type %></Data></Cell>      
-        <Cell><Data ss:Type="String"><%= applic.need_compensation %></Data></Cell>      
+        <Cell><Data ss:Type="String"><%= applic.participation_type %></Data></Cell>
       </Row>
     <% end %>
     </Table>
