--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,7 @@
       </div>
       <h1 class="home_conf_title"><%= t :home_conf_antok %></h1>
       <h2 class="home_conf_subtitle"><%= t :home_conf_moto %></h2>
+      <h2 class="home_conf_subtitle">26 - 28 августа, Москва</h2>
       <%= yield %> 
       <footer class="footer">
         <hr/>
@@ -49,7 +50,7 @@
             <% if params[:locale]=='en' %>
               Site made by <a href="http://www.busation.com">Michael Klishevich</a>
             <% else %>
-              Разработка сайта <a href="http://www.busation.com">Майкл Клишевич</a>
+              Created with love by <a href="https://www.facebook.com/klishevich">Michael Klishevich</a>
             <% end %>
           </div>
         </div>
