--- a/app/views/layouts/_nav2017.html.erb
+++ b/app/views/layouts/_nav2017.html.erb
@@ -16,14 +16,21 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><%= link_to t(:home_link_home), root_path %></li>
-        <% if user_signed_in? %>
-          <li><%= link_to t(:step2_my_account_btn), edit_user_registration_path %></li>
-          <li><%= link_to t(:find_antokid), antok_id_path %></li>
-          <li><%= link_to t(:home_link_log_out), destroy_user_session_path, :method=>'delete' %></li>
-        <% else %>
-          <li><%= link_to t(:home_link_log_in), new_user_session_path %></li>
-          <li><%= link_to t(:sign_up), new_user_registration_path %></li>
-        <% end %> 
+        <li><%= link_to t(:home_link_about), about_path %></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Личный кабинет <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <% if user_signed_in? %>
+              <li><%= link_to t(:step2_my_account_btn), edit_user_registration_path %></li>
+              <li><%= link_to t(:home_link_log_out), destroy_user_session_path, :method=>'delete' %></li>
+            <% else %>
+              <li><%= link_to t(:home_link_log_in), new_user_session_path %></li>
+              <li><%= link_to t(:sign_up), new_user_registration_path %></li>
+            <% end %> 
+          </ul>
+        </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
