--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -3,7 +3,7 @@
   <div class="col-md-6">
     <div class="info_wrapper">
       <div class="info_about">
-        Ассоциация научно-технических обществ корейцев (АНТОК) является некоммерческой организацией, созданной для развития и укрепления Российской диаспоры корейцев путем популяризации науки и образования среди молодежи, установления научных и профессиональных связей между представителями диаспоры, развития сотрудничества между научными сообществами корейцев, проживающих в других странах.
+        Научно-техническое общество "АНТОК" является некоммерческой организацией, созданной для развития и укрепления Российской диаспоры корейцев путем популяризации науки и образования среди молодежи, установления научных и профессиональных связей между представителями диаспоры, развития сотрудничества между научными сообществами корейцев, проживающих в других странах.
       </div>
       <h3 id="activity"> Деятельность</h3>
       <div class="list_of_activities">
