--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -32,7 +32,7 @@
         </div>
       <% end %>
       <div class="attach">
-        <div><%= link_to "Информационное письмо (Рус.)", '/docs/Inform1_v2.3.docx' %></div>
+        <div><%= link_to "Информационное письмо (Рус.)", '/docs/Inform1_v2.4.doc' %></div>
         <!-- <div><%= link_to "Informational Letter (Eng.)", '/docs/Inform1_STconference_ENG2.pdf' %></div> -->
       </div> 
     </div> 
