--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -8,8 +8,8 @@
       <h3 id="activity"> Деятельность</h3>
       <div class="list_of_activities">
         <ul>
-          <li>Организация ежегодных международных конференций научно-практических конференций и региональных семинаров;</li>
-          <li>Поддержка участия ученых АНТОК в международных научных конференция, проводимых за рубежом;</li>
+          <li>Организация ежегодных международных научно-практических конференций и региональных семинаров;</li>
+          <li>Поддержка участия ученых АНТОК в международных научных конференциях, проводимых за рубежом;</li>
           <li>Организация и информационная поддержка мероприятий, связанных с вовлечением молодежи в международные научные и образовательные программы;</li>
           <li>Представительство российских ученых в KOFST (Korean Federation of Science and Technology), Республика Корея;</li>
           <li>и многое другое.</li>
