add history and message pages

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -110,6 +110,15 @@ textarea.form-control {
   }
 }
 
+.history-block {
+  margin-top: 20px;
+}
+
+.history-block2 {
+  margin-top: 20px;
+  text-align: center;
+}
+
 // body {
 //   padding-top: 20px;
 //   padding-bottom: 60px;
