new info letter

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -77,7 +77,7 @@
         Оргкомитет АНТОК
       </div>
       <div class="attach">
-        <div><%= link_to "Информационное письмо (Рус.)", '/docs/Inform1_v2.4.doc' %></div>
+        <div><%= link_to "Информационное письмо (Рус.)", '/docs/Inform1_v2.5.docx' %></div>
       </div>
     </div>
   </div>
