--- a/app/views/applics/index.xls.erb
+++ b/app/views/applics/index.xls.erb
@@ -13,6 +13,7 @@
         <Cell><Data ss:Type="String">ID АНТОК</Data></Cell>
         <Cell><Data ss:Type="String">ФИО</Data></Cell>
         <Cell><Data ss:Type="String">ФИО по-английски</Data></Cell>
+        <Cell><Data ss:Type="String">Дата рождения</Data></Cell>
         <Cell><Data ss:Type="String">Email</Data></Cell>
         <Cell><Data ss:Type="String">Мобильный телефон</Data></Cell>
         <Cell><Data ss:Type="String">Рабочий телефон</Data></Cell>
@@ -40,6 +41,7 @@
         <Cell><Data ss:Type="String"><%= applic.user.antok_id %></Data></Cell>
         <Cell><Data ss:Type="String"><%= applic.fio %></Data></Cell>
         <Cell><Data ss:Type="String"><%= applic.fio_eng %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.birth_date %></Data></Cell>
         <Cell><Data ss:Type="String"><%= applic.email %></Data></Cell>
         <Cell><Data ss:Type="String"><%= applic.phones %></Data></Cell>
         <Cell><Data ss:Type="String"><%= applic.phone_work %></Data></Cell>
