--- a/app/views/applics/edit.html.erb
+++ b/app/views/applics/edit.html.erb
@@ -7,6 +7,7 @@
       <h3><%= t(:personal_info) %></h3>
       <%= f.input :fio, :input_html => { :class => 'form-control' } %>
       <%= f.input :fio_eng, :input_html => { :class => 'form-control' } %>
+      <%= f.input :birth_date, :as => :date_picker, :input_html => { :class => 'form-control' } %>
       <%= f.input :email, :input_html => { :class => 'form-control' } %>
       <%= f.input :phones, :input_html => { :class => 'form-control' } %>
       <%= f.input :phone_work, :input_html => { :class => 'form-control' } %>
