--- a/app/views/applics/new.html.erb
+++ b/app/views/applics/new.html.erb
@@ -11,6 +11,7 @@
       <h3><%= t(:personal_info) %></h3>
       <%= f.input :fio, :input_html => { :class => 'form-control' } %>
       <%= f.input :fio_eng, :input_html => { :class => 'form-control' } %>
+      <%= f.input :birth_date, :as => :date_picker, :input_html => { :class => 'form-control' } %>
       <%= f.input :email, :input_html => { :class => 'form-control' } %>
       <%= f.input :phones, :input_html => { :class => 'form-control' }, hint: "10 знаков, пример ввода 9161234567 / 4951234567" %>
       <%= f.input :phone_work, :input_html => { :class => 'form-control' } %>
