--- a/app/views/applics/index.xls.erb
+++ b/app/views/applics/index.xls.erb
@@ -32,6 +32,7 @@
         <Cell><Data ss:Type="String">Соавторы</Data></Cell>
         <Cell><Data ss:Type="String">Тип участия</Data></Cell>
         <Cell><Data ss:Type="String">Нужна ли гостиница</Data></Cell>
+        <Cell><Data ss:Type="String">Отправлен доклад</Data></Cell>
       </Row>
     <% @applics.each do |applic| %>
       <Row>
@@ -60,6 +61,7 @@
         <Cell><Data ss:Type="String"><%= applic.conf_coauthors %></Data></Cell>
         <Cell><Data ss:Type="String"><%= applic.participation_type %></Data></Cell>
         <Cell><Data ss:Type="String"><%= applic.need_hotel %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.applic_file ? "Да" : "Нет" %></Data></Cell>
       </Row>
     <% end %>
     </Table>
