--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -84,6 +84,8 @@
       </div>
       <div class="attach">
         <div><%= link_to "Информационное письмо (Рус.)", '/docs/Inform1_v2.5.docx' %></div>
+        <br/>
+        <div><%= link_to "Программа конференции / Program", '/docs/2018_Program_EN_RU_v1.4.pdf', target: "_blank" %></div>
       </div>
     </div>
   </div>
