--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
       <%= render 'layouts/nav' %>
       <%= render 'layouts/messages' %>
       <div class="row banners">
-        <div class="col-md-offset-1 col-md-2 hidden-xs hidden-sm banner">
+        <div class="col-md-2 hidden-xs hidden-sm banner">
           <%= image_tag "banner_aksts2_a.jpg", class: "img-responsive" %>
         </div>
         <div class="col-md-2 hidden-xs hidden-sm banner">
@@ -22,6 +22,9 @@
         </div>
         <div class="col-md-2 hidden-xs hidden-sm banner">
           <%= image_tag "banner_ook_a.jpg", class: "img-responsive" %>
+        </div>
+        <div class="col-md-2 hidden-xs hidden-sm banner">
+          <%= image_tag "banner_mdkm_a.png", class: "img-responsive" %>
         </div>
         <div class="col-md-2 hidden-xs hidden-sm banner">
           <%= image_tag "banner_kahak_a.png", class: "img-responsive" %>
@@ -38,6 +41,9 @@
         </div>
         <div class="hidden-md hidden-lg banner">
           <%= image_tag "banner_ook_a.jpg", class: "img-responsive" %>
+        </div>
+        <div class="hidden-md hidden-lg banner">
+          <%= image_tag "banner_mdkm_a.png", class: "img-responsive" %>
         </div>
         <div class="hidden-md hidden-lg banner">
           <%= image_tag "banner_kahak_tinbo.jpg", class: "img-responsive" %>
